Fix header on Safari

--- a/src/components/HeaderMenu/HeaderMenu.css
+++ b/src/components/HeaderMenu/HeaderMenu.css
@@ -23,11 +23,12 @@
 .ui.menu.header-menu a {
     display: block;
     height: 100%;
-    width: calc(var(--height-header-desktop) - 10%);
+    width: var(--height-header-desktop);
 }
 
 .ui.menu.header-menu .logo__image {
     height: 100%;
+    max-width: 100%;
 }
 
 /* Tablets */
@@ -46,7 +47,7 @@
     }
 
     .ui.menu.header-menu a {
-        width: calc(var(--height-header-tablet) - 10%);
+        width: var(--height-header-tablet);
     }
 }
 
@@ -66,6 +67,6 @@
     }
 
     .ui.menu.header-menu a {
-        width: calc(var(--height-header-phone) - 10%);
+        width: var(--height-header-phone);
     }
 }
